addons/kyverno/policies/medtech-iso_14971_risk_management_file-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-iso_14971_risk_management_file
  annotations:
    rulehub.id: medtech.iso_14971_risk_management_file
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "medtech.iso_14971_risk_management_file: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
